# emissions-tracker

./: .env.example  CONTRIBUTING.md  CORRECTIONS.md  Dockerfile.api  Dockerfile.pipeline  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
.github/ISSUE_TEMPLATE/: challenge-a-number.yml
.github/workflows/: ingest.yml  pages.yml
alembic/: env.py
alembic/versions/: 69d69119b891_initial_schema.py  a27e000535e7_rename_value_mt_co2e_to_value_t_co2e.py  a2b3c4d5e6f7_widen_spread_pct.py  b3c4d5e6f7g8_add_coverage_snapshots.py  c4d5e6f7g8h9_add_webhooks.py  d5e6f7g8h9i0_idempotent_ingest.py  e6f7g8h9i0j1_idempotent_validate.py  f7g8h9i0j1k2_add_referrer_to_api_call_logs.py  g8h9i0j1k2l3_add_first_api_call_at.py
data/carb/: sample-2026.json
data/cdp/: sample-2023.json
docs/: analytics-queries.sql  case-studies.md  launch-readiness.md
docs/launch/: journalist-template.md  reddit-post.md  show-hn-post.md
docs/runbooks/: et-83-cutover.md
examples/: discrepancy-exxon.md
scripts/: e2e.sh  launch-stress-test.sh
sdk/: pyproject.toml
sdk/src/emissions_tracker/: __init__.py  async_client.py  client.py  models.py
sdk/tests/: test_async_client.py  test_client.py
site/: index.html  style.css
src/api/: deps.py  main.py
src/pipeline/: cli.py  company_mapping.py  coverage.py  export.py  normalize.py  validate.py
src/shared/: config.py  corrections.py  db.py  models.py  schemas.py  webhooks.py
tests/: conftest.py  test_config.py  test_coverage.py  test_coverage_api.py  test_models.py  test_schemas.py  test_source_registry.py
(+64 files in other folders)
