[project]
name = "emissions-tracker"
version = "0.1.0"
description = "Open-source corporate emissions transparency tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "pdfplumber>=0.11.0",
    "anthropic>=0.42.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[project.scripts]
emissions-pipeline = "src.pipeline.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring Docker Compose stack"]

[tool.ruff]
target-version = "py312"
line-length = 100
