[project]
name = "emissions-tracker-sdk"
version = "0.1.0"
description = "Python SDK for the Emissions Tracker API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emissions_tracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
